removed container overflow:hidden fixed

--- a/css/components/card.css
+++ b/css/components/card.css
@@ -6,11 +6,6 @@
   padding-bottom: 12px;
   padding-left: 30px;
   padding-right: 30px;
-  margin: 0 -12px;
-}
-
-.card > * {
-  padding: 0 12px;
 }
 
 .card-title, .card-description {
@@ -72,33 +67,29 @@
   .card {
     padding-top: 31px;
     padding-bottom: 18px;
-    }
+    margin: 0 -12px;
+  }
+
+  .card > * {
+    padding: 0 12px;
+  }
 
   .card-title {
-	text-align: left;
-	font-size: 28px;
-<<<<<<< HEAD
-=======
-	font-weight: 600;
->>>>>>> 4beffe826763a0137a70704397dd4fb5fc5068f9
-	line-height: 1;
-	margin-bottom: 10px;
+    text-align: left;
+    font-size: 28px;
+    line-height: 1;
+    margin-bottom: 10px;
   }
 
   .card-description {
-	text-align: left;  
+	  text-align: left;  
     font-size: 17px;
-<<<<<<< HEAD
-=======
-	font-weight: 400;
-	line-height: 1.4;
->>>>>>> 4beffe826763a0137a70704397dd4fb5fc5068f9
   }
 
   .card-media {
     height: 130px;
     width: 130px;
-	margin-bottom: 16px;
+	  margin-bottom: 16px;
   }
 
   .features-img {
@@ -108,13 +99,7 @@
 
 @media screen and (min-width: 640px) {
   .card {
-<<<<<<< HEAD
-=======
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
->>>>>>> 4beffe826763a0137a70704397dd4fb5fc5068f9
-	padding: 0;
+	  padding: 0;
     padding-top: 73px;
   }
 
