--- a/css/components/hero.css
+++ b/css/components/hero.css
@@ -77,14 +77,14 @@
   }
   
   .hero-layout > * {
-  padding: 0 20px;
-}
+    padding: 0 20px;
+  }
   
   .hero-img {
-  width: 100%;
-  height: auto;
-  margin: 0;
-}
+    width: 100%;
+    height: auto;
+    margin: 0;
+  }
 
   .hero-title, .hero-description {
     text-align: left;
@@ -93,19 +93,19 @@
 
 @media screen and (min-width: 640px) {
   .hero-layout {
-  margin: 0 -20px;
-}
+    margin: 0 -20px;
+  }
 
-.hero-layout > * {
-  padding: 0 20px;
-}
+  .hero-layout > * {
+    padding: 0 20px;
+  }
 
   .hero-textarea {
     line-height: 44.42px;
   }
   
   .hero-title {
-    font-size: 36px;
+    font-size: 35px;
   }
 
   .hero-description {
@@ -115,13 +115,13 @@
 }
 
 @media screen and (min-width: 960px) {
-    .hero-layout {
-  margin: 0 -35px;
-}
+  .hero-layout {
+    margin: 0 -35px;
+  }
 
-.hero-layout > * {
-  padding: 0 35px;
-}	
+  .hero-layout > * {
+    padding: 0 35px;
+  }	
 	
   .hero-textarea {
     line-height: 44.42px;
