--- a/css/components/list.css
+++ b/css/components/list.css
@@ -27,21 +27,8 @@
   }
   
   .list-description {
-<<<<<<< HEAD
-=======
-    font-size: 15px;
-  }
-}
-
-@media screen and (min-width: 640px) {
-  .list-title {
-    font-size: 26px;
-  }
-  
-  .list-description {
->>>>>>> 4beffe826763a0137a70704397dd4fb5fc5068f9
     font-size: 14px;
-	line-height: 1.4
+	  line-height: 1.4
   }
 }
 
@@ -51,12 +38,7 @@
   }
   
   .list-description {
-<<<<<<< HEAD
     font-size: 18px;
-	line-height: 28px;
-=======
-    font-size: 15px;
-	line-height: 24px;
->>>>>>> 4beffe826763a0137a70704397dd4fb5fc5068f9
+	  line-height: 28px;
   }
 }
