--- a/css/components/section.css
+++ b/css/components/section.css
@@ -49,6 +49,7 @@
     max-width: 371px;
     margin: 0;
   }
+
   .section-layout {
     align-items: stretch;
     margin: 0 -40px;
@@ -59,29 +60,18 @@
   }
   
   .section-title {
-  font-size: 28px;
-}
+    font-size: 28px;
+  }
 
   .section-body {
     display: flex;
     align-items: center;
-<<<<<<< HEAD
-=======
-  }
-
-  .col {
-    border: none;
-  }
-
-  .section-features {
-    margin-bottom: 91px;
->>>>>>> 4beffe826763a0137a70704397dd4fb5fc5068f9
   }
 }
 
 @media screen and (min-width: 640px) {  
 	.section-features .container {
-	padding: 0 30px;
+	  padding: 0 30px;
 	}
   
   .section-layout {
@@ -92,16 +82,12 @@
     padding: 0 15px;;
   }
 
-<<<<<<< HEAD
-=======
-  
->>>>>>> 4beffe826763a0137a70704397dd4fb5fc5068f9
   .section-title {
-  font-size: 34px;
-  line-height: 44.42px;
-  margin-bottom: 36px;
-  text-align: left;
-}
+    font-size: 34px;
+    line-height: 44.42px;
+    margin-bottom: 36px;
+    text-align: left;
+  }
 
   .col {
     border: none;
